--- a/index.html
+++ b/index.html
@@ -5,10 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-<script src="index.js"></script>
+    <script src="index.js"></script>
 </head>
 
 <body>
+<div class="cube">
+    <div class="top"></div>
+    <div>
+        <spam style="--i:0"></spam>
+        <spam style="--i:1"></spam>
+        <spam style="--i:2"></spam>
+        <spam style="--i:3"></spam>
+    </div>
+</div>
 
 </body>
 
